--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "grommet": "^2.0.1",
+    "grommet": "^2.13.0",
     "grommet-icons": "^3.2.0",
+    "grommet-theme-hpe": "https://github.com/grommet/grommet-theme-hpe/tarball/NEXT-stable",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.0.3"
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
